--- a/index.html
+++ b/index.html
@@ -8,13 +8,47 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <!-- ... (Replicate Flipkart's navigation bar) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Flipkart</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Electronics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Fashion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home &amp; Furniture</a>
+          </li>
+          <!-- ... more navigation links -->
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <!-- Main Content -->
-  <!-- ... (Replicate Flipkart's main content, including product listings) -->
+  <!-- Banner Section -->
+  <section class="banner bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1>Welcome to Flipkart</h1>
+      <p>Your Ultimate Shopping Destination</p>
+      <a href="#" class="btn btn-light btn-lg">Shop Now</a>
+    </div>
+  </section>
+
+  <!-- Product Listings -->
+  <section class="container py-5">
+    <!-- Bootstrap cards with product details and images -->
+  </section>
 
   <!-- Footer -->
-  <!-- ... (Replicate Flipkart's footer) -->
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2023 Flipkart. All rights reserved.</p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
@@ -80,7 +114,6 @@
 
 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -91,13 +124,47 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <!-- ... (Replicate ASUS' navigation bar) -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">ASUS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Support</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Where to Buy</a>
+          </li>
+          <!-- ... more navigation links -->
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <!-- Main Content -->
-  <!-- ... (Replicate ASUS' main content, including product listings) -->
+  <!-- Hero Section -->
+  <section class="hero bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1>In Search of Incredible</h1>
+      <p>Discover the World of ASUS Innovation</p>
+      <a href="#" class="btn btn-light btn-lg">Explore Now</a>
+    </div>
+  </section>
+
+  <!-- Product Showcase -->
+  <section class="container py-5">
+    <!-- Bootstrap cards with product details and images -->
+  </section>
 
   <!-- Footer -->
-  <!-- ... (Replicate ASUS' footer) -->
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2023 ASUS. All rights reserved.</p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
